fix: fixed bugs
